--- a/style-tile/index.html
+++ b/style-tile/index.html
@@ -13,14 +13,18 @@
 	
 </head>
 <body>
-	
+
+
 	<div class="container">
-		
+	
+		<header>
+		<img src="img/marulogo.png">
+		</header>
 
-		<section>
+		<section class="grid_3">
 
-			<h1>Project</h1>
-			<em>Version 0</em>
+			<h1>Maru Sushi</h1>
+			<em>Version 1</em>
 			
 			<br><br>
 
@@ -45,10 +49,12 @@
 			<h4>A Heading</h4>	
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, maiores, hic, <a href="">Links</a> dolor laboriosam rerum numquam accusantium minima architecto inventore quibusdam <a href="">Links </a>.</p>
 			<em>Font name, varient, color</em>
+
 			
 		</section>
-		
-		<section>
+	
+   
+		<section class="grid_9 omega">
 			<div class="color-1"></div>
 			<div class="color-2"></div>
 			<div class="color-3"></div>
@@ -57,30 +63,32 @@
 			<div class="clear"></div>
 		</section>
 
-		<section>
-			<div class="imagery-1"></div>
-			<div class="imagery-2"></div>
-			<div class="imagery-3"></div>
+		<section class="grid_9 omega">
+			<div class="imagery-1"><img src="img/img1.jpg"></div>
+			<div class="imagery-2"><img src="img/img2.jpg"></div>
+			<div class="imagery-3"><img src="img/img3.jpg"></div>
 			<em>Imagagery</em>
 
 			<div class="clear"></div>
 		</section>
 
+
 		
 		<section>
-			<div class="pattern-1"></div>
-			<div class="pattern-2"></div>
-			<div class="pattern-3"></div>
+			<div class="pattern-1"><img src="img/tx1.jpg"></div>
+			<div class="pattern-2"><img src="img/tx2.jpg"></div>
+			<div class="pattern-3"><img src="img/tx3.jpg"></div>
 			<em>Textures/Patterns</em>
 
 			<div class="clear"></div>
 		</section>
 
+
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
 	</div>
-	
+</div>
   
 </body>
 </html>
