--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>DESN 378 Website Starter</title>
+  <title>Sushi Maru</title>
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
@@ -17,7 +17,46 @@
 
 <body>
   
-  <h1>378 Website Starter</h1>
+<img src="img/marulogo.jpg">
+
+  <h1>Welcome to Sushi Maru</h1>
+
+
+<div class="ui pointing menu">
+  <a class="active item">
+    <i></i> Home
+  </a>
+  <a class="item">
+    <i></i> Menu
+  </a>
+  <a class="item">
+    <i></i> Contact
+  </a>
+  <div class="right menu">
+    <div class="item">
+      <div class="ui icon input">
+        <input type="text" placeholder="Search...">
+        <i class="search link icon"></i>
+      </div>
+    </div>
+    <div class="ui dropdown item">
+      Language <i class="dropdown icon"></i>
+      <div class="menu">
+        <a class="item">English</a>
+        <a class="item">Russian</a>
+        <a class="item">Spanish</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
