--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
 </head>
 
 <body>
-  
-<img src="img/marulogo.jpg">
+<div class="ui grid">
 
-  <h1>Welcome to Sushi Maru</h1>
+  
+
+
+<div class="one wide column">
+      <h1>Welcome!</h1>
+  </div>
+
 
 
 <div class="ui pointing menu">
-  <a class="active item">
+  <a class="active item red">
     <i></i> Home
   </a>
   <a class="item">
@@ -32,29 +37,34 @@
   <a class="item">
     <i></i> Contact
   </a>
-  <div class="right menu">
-    <div class="item">
-      <div class="ui icon input">
-        <input type="text" placeholder="Search...">
-        <i class="search link icon"></i>
-      </div>
-    </div>
-    <div class="ui dropdown item">
-      Language <i class="dropdown icon"></i>
-      <div class="menu">
-        <a class="item">English</a>
-        <a class="item">Russian</a>
-        <a class="item">Spanish</a>
-      </div>
-    </div>
+
+   
   </div>
 </div>
 
+container 
+<div class="two wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="two wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+  <div class="two wide column">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quo eos deleniti sapiente nam fugit ducimus, iusto ullam ut explicabo accusantium cupiditate at harum facere recusandae. Quas officiis iste consequuntur?</p>
+  </div>
+  <div class="two wide column">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae ab quae ducimus aliquam saepe quam, repellendus ipsum mollitia eveniet fugiat quo eligendi! Maxime quibusdam facilis reiciendis eius aliquam, officia asperiores.</p>
+  </div>
 
 
 
 
 
+</div>
 
 
   
