--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+
 <div class="ui grid">
 
   
@@ -42,29 +44,41 @@
   </div>
 </div>
 
-container 
-<div class="two wide column">
+<div class="ui grid">
+  <div class="eight wide column">
     <div class="ui segment">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
     </div>
   </div>
-  <div class="two wide column">
+  <div class="eight wide column">
     <div class="ui segment">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
     </div>
   </div>
-  <div class="two wide column">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quo eos deleniti sapiente nam fugit ducimus, iusto ullam ut explicabo accusantium cupiditate at harum facere recusandae. Quas officiis iste consequuntur?</p>
-  </div>
-  <div class="two wide column">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae ab quae ducimus aliquam saepe quam, repellendus ipsum mollitia eveniet fugiat quo eligendi! Maxime quibusdam facilis reiciendis eius aliquam, officia asperiores.</p>
-  </div>
 
+  <div class="ui horizontal icon divider">
+  <i class="circular heart icon"></i>
+</div>
+
+  <div class="eight wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="eight wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+  
+  
+</div>
 
 
 
 
 </div>
+
 
 
   
