--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
 
 <div class="ui grid">
 
-  
+<div class="two wide column">
+  <a href="http://danielk7.github.io/p3-restaurant/">
+  <img class="ui medium image" src="/img/marulogo.png">
+</a>
+</div>
 
 
-<div class="one wide column">
+
+<div class="two wide column">
       <h1>Welcome!</h1>
   </div>
-
 
 
 <div class="ui pointing menu">
@@ -44,38 +48,106 @@
   </div>
 </div>
 
+
+<div class="ui medium images">
+  <img src="/images/demo/photo.jpg">
+  <img src="/images/demo/photo.jpg">
+  <img src="/images/demo/photo.jpg">
+  <img src="/images/demo/photo.jpg">
+</div>
+
+
+<div class="ui horizontal icon divider">
+  <i class="circular heart icon"></i>
+</div>
+
+
 <div class="ui grid">
-  <div class="eight wide column">
+  <div class="four wide column">
     <div class="ui segment">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
     </div>
   </div>
-  <div class="eight wide column">
+  <div class="four wide column">
     <div class="ui segment">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
     </div>
   </div>
+
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+
+
+
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+  
 
   <div class="ui horizontal icon divider">
   <i class="circular heart icon"></i>
 </div>
+  
+<!---Footer -->
+<div class="eight wide column">
+<h3 class="ui dividing header four wide column">
+  Open Hours
+</h3>
+<p>Understanding how dogs behave in nature can help us to better fulfill their needs when we bring them into our homes.</p>
+<p>When a puppy enters the world, his first pack leader is his mother. Canine moms teach rules, boundaries, and limitations from day one!</p>
+<p>Newborn puppies don't get a name like we do. The closest thing to a personality is a dog's status within the pack. In the animal world, there are two positions: the leader and the follower.</p>
+</div>
 
-  <div class="eight wide column">
-    <div class="ui segment">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
-    </div>
-  </div>
-  <div class="eight wide column">
-    <div class="ui segment">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
-    </div>
-  </div>
-  
-  
+<div class="eight wide column">
+<h3 class="ui dividing header">
+  Our Location
+</h3>
+<ul>
+    <li>Address Sushi Maru</li>
+    <li>River Park Square</li>
+    <li>808 West Main Avenue Suite #105</li>
+    <li>Spokane, WA 99201</li>
+    <li><i class="phone icon red"></i><a href="tel:509-455-3900"></a>509-455-3900</li>
+    <li><i class="mail icon red"></i><a href="mailto:maruspokane@gmail.com">Email</a></li>
+  </ul>
 </div>
 
 
 
+
+
+
+
+
+
+
+</div>
 
 </div>
 
