--- a/index.html
+++ b/index.html
@@ -119,23 +119,65 @@
 <h3 class="ui dividing header four wide column">
   Open Hours
 </h3>
-<p>Understanding how dogs behave in nature can help us to better fulfill their needs when we bring them into our homes.</p>
-<p>When a puppy enters the world, his first pack leader is his mother. Canine moms teach rules, boundaries, and limitations from day one!</p>
-<p>Newborn puppies don't get a name like we do. The closest thing to a personality is a dog's status within the pack. In the animal world, there are two positions: the leader and the follower.</p>
+<p>Monday 11:30pm-9:30pm</p>
+<p>Tuesday 11:30pm-9:30pm</p>
+<p>Wednesday 11:30pm-9:30pm</p>
+<p>Thursday 11:30pm-9:30pm</p>
+<p>Friday 11:30pm-9:30pm </p>
+<p>Saturday 11:30pm-9:30pm</p>
+<p>Sunday & Holiday 11:30am-9:00pm</p>
 </div>
 
 <div class="eight wide column">
-<h3 class="ui dividing header">
+
+
+
+
+  <h3 class="ui dividing header">
   Our Location
 </h3>
-<ul>
-    <li>Address Sushi Maru</li>
-    <li>River Park Square</li>
-    <li>808 West Main Avenue Suite #105</li>
-    <li>Spokane, WA 99201</li>
-    <li><i class="phone icon red"></i><a href="tel:509-455-3900"></a>509-455-3900</li>
-    <li><i class="mail icon red"></i><a href="mailto:maruspokane@gmail.com">Email</a></li>
-  </ul>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10749.040677192921!2d-117.423774!3d47.659942!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4100979c0cf5d029!2sSushi+Maru!5e0!3m2!1sen!2sus!4v1415213745607" width="470" height="300" frameborder="0" style="border:0"></iframe>
+
+    <p>Sushi Maru // River Park Square</p>
+    <p>808 West Main Avenue Suite #105</p>
+    <p>Spokane, WA 99201</p>
+    <p><i class="phone icon red"></i><a href="tel:509-455-3900"></a>509-455-3900</p>
+    <p><i class="mail icon red"></i><a href="mailto:maruspokane@gmail.com">Email</a></p>
+</div>
+
+<div class="sixteen wide column">
+<h3 class="ui dividing header">
+Send us a message
+</h3>
+<form class="ui form attached fluid">
+  <div class="two fields">
+    <div class="field">
+      <label>First Name</label>
+      <input placeholder="First Name" type="text">
+    </div>
+    <div class="field">
+      <label>Last Name</label>
+      <input placeholder="Last Name" type="text">
+    </div>
+  </div>
+  <div class="field">
+    <label>E-mail</label>
+    <input placeholder="E-mail" type="text">
+  </div>
+  <div class="field">
+    <label>Message</label>
+    <input placeholder="Type your message here..." type="text">
+  </div>
+  <div class="inline field">
+    <div class="ui checkbox">
+      <input type="checkbox" id="terms">
+      <label for="terms">I agree to the terms and conditions</label>
+    </div>
+  </div>
+  <div href="" class="ui submit button">Submit</div>
+
+
+</form>
 </div>
 
 
