--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<!--// HEADER //-->
 
 <div class="ui grid">
 
@@ -32,6 +32,7 @@
       <h1>Welcome!</h1>
   </div>
 
+<!--// MENU //-->
 
 <div class="ui pointing menu">
   <a class="active item red">
@@ -61,6 +62,9 @@
   <i class="circular heart icon"></i>
 </div>
 
+<!--// PAGE 2 //-->
+
+<!--// ROW 1 //-->
 
 <div class="ui grid">
   <div class="four wide column">
@@ -85,7 +89,31 @@
     </div>
   </div>
 
+<!--// ROW 2 //-->
 
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui segment">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum officia accusamus ad. Et, a, debitis. Officia architecto quidem nobis, velit perspiciatis nostrum. Illo cupiditate, voluptas modi expedita quia ipsam sequi?</p>
+    </div>
+  </div>
+
+<!--// ROW 3 //-->
 
   <div class="four wide column">
     <div class="ui segment">
@@ -114,7 +142,9 @@
   <i class="circular heart icon"></i>
 </div>
   
-<!---Footer -->
+<!--// PAGE 3 //-->
+
+
 <div class="eight wide column">
 <h3 class="ui dividing header four wide column">
   Open Hours
@@ -129,15 +159,24 @@
 </div>
 
 <div class="eight wide column">
+<h3 class="ui dividing header four wide column">
+Make a reservation
+</h3>
+<p>Monday 11:30pm-9:30pm</p>
+<p>Tuesday 11:30pm-9:30pm</p>
+<p>Wednesday 11:30pm-9:30pm</p>
+<p>Thursday 11:30pm-9:30pm</p>
+<p>Friday 11:30pm-9:30pm </p>
+<p>Saturday 11:30pm-9:30pm</p>
+<p>Sunday & Holiday 11:30am-9:00pm</p>
+</div>
 
 
-
-
+<div class="eight wide column">
   <h3 class="ui dividing header">
   Our Location
 </h3>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10749.040677192921!2d-117.423774!3d47.659942!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4100979c0cf5d029!2sSushi+Maru!5e0!3m2!1sen!2sus!4v1415213745607" width="470" height="300" frameborder="0" style="border:0"></iframe>
-
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10749.040677192921!2d-117.423774!3d47.659942!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4100979c0cf5d029!2sSushi+Maru!5e0!3m2!1sen!2sus!4v1415213745607" width="465" height="250" frameborder="0" style="border:0"></iframe>
     <p>Sushi Maru // River Park Square</p>
     <p>808 West Main Avenue Suite #105</p>
     <p>Spokane, WA 99201</p>
@@ -145,7 +184,8 @@
     <p><i class="mail icon red"></i><a href="mailto:maruspokane@gmail.com">Email</a></p>
 </div>
 
-<div class="sixteen wide column">
+
+<div class="eight wide column">
 <h3 class="ui dividing header">
 Send us a message
 </h3>
@@ -166,7 +206,7 @@ Send us a message
   </div>
   <div class="field">
     <label>Message</label>
-    <input placeholder="Type your message here..." type="text">
+    <input id="message" placeholder="Type your message here..." type="text">
   </div>
   <div class="inline field">
     <div class="ui checkbox">
@@ -175,13 +215,29 @@ Send us a message
     </div>
   </div>
   <div href="" class="ui submit button">Submit</div>
-
-
 </form>
 </div>
 
 
+<div class="ui horizontal icon divider">
+  <i class="circular heart icon"></i>
+</div>
 
+
+<!--// FOOTTER //-->
+
+<footer>
+      <div class="container_12">
+        <div class="grid_12">
+          <div class="copy">
+            <a onClick="goToByScroll('page1'); return false;" href="#"></a>  &copy; 2014 | <a href="#">Privacy Policy</a> <br> Website designed by Daniel K from <a href="http://skydream-studio.com/" rel="nofollow">Sky Dream Studio</a>
+          </div>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </footer>
+  </body>
+</html>
 
 
 
