--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <title>Sushi Maru</title>
-
+  <link rel="icon" href="img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -25,6 +25,8 @@
   <img class="ui medium image" src="/img/marulogo.png">
 </a>
 </div>
+
+
 
 
 
@@ -59,7 +61,7 @@
 
 
 <div class="ui horizontal icon divider">
-  <i class="circular heart icon"></i>
+  <i class="circular heart red icon"></i>
 </div>
 
 <!--// PAGE 2 //-->
@@ -139,7 +141,7 @@
   
 
   <div class="ui horizontal icon divider">
-  <i class="circular heart icon"></i>
+  <i class="circular heart red icon"></i>
 </div>
   
 <!--// PAGE 3 //-->
@@ -220,21 +222,20 @@ Send us a message
 
 
 <div class="ui horizontal icon divider">
-  <i class="circular heart icon"></i>
+  <i class="circular heart red icon"></i>
 </div>
 
 
 <!--// FOOTTER //-->
 
 <footer>
-      <div class="container_12">
-        <div class="grid_12">
+      <div class="sixteen wide column">
           <div class="copy">
             <a onClick="goToByScroll('page1'); return false;" href="#"></a>  &copy; 2014 | <a href="#">Privacy Policy</a> <br> Website designed by Daniel K from <a href="http://skydream-studio.com/" rel="nofollow">Sky Dream Studio</a>
           </div>
-        </div>
+      
         <div class="clear"></div>
-      </div>
+     
     </footer>
   </body>
 </html>
