--- a/index.html
+++ b/index.html
@@ -20,19 +20,15 @@
 
 <div class="ui grid">
 
-<div class="two wide column">
+<div class="sixteen wide center aligned column">
   <a href="http://danielk7.github.io/p3-restaurant/">
-  <img class="ui medium image" src="/img/marulogo.png">
-</a>
+  <img id="logo" class="ui image" src="img/marulogo250.png">
+</a> 
 </div>
 
 
 
 
-
-<div class="two wide column">
-      <h1>Welcome!</h1>
-  </div>
 
 <!--// MENU //-->
 
@@ -52,12 +48,18 @@
 </div>
 
 
-<div class="ui medium images">
-  <img src="/images/demo/photo.jpg">
-  <img src="/images/demo/photo.jpg">
-  <img src="/images/demo/photo.jpg">
-  <img src="/images/demo/photo.jpg">
-</div>
+<!--// SLIDESHOW //-->
+
+
+<section class="slideshow">
+  <div class="slideshow-container slide">
+    <img src="img/slide1.png"/>
+    <img src="img/slide2.png"/>
+    <img src="img/slide3.png"/>
+    <img src="img/slide4.png"/>
+  </div>
+</section>
+
 
 
 <div class="ui horizontal icon divider">
