--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="js/js.js">
   <script src="js/js.js"></script>
+  <script src="js/jquery.js"></script>
+  
+
 
 </head>
 
@@ -340,10 +343,6 @@ Send us a message
       <div class="eight wide column">
           <div class="copy">
             <a onClick="goToByScroll('page1'); return false;" href="#"></a>  &copy; 2014 | <a href="#">Privacy Policy</a> <br> Website designed by Daniel K from <a href="http://skydream-studio.com/" rel="nofollow">Sky Dream Studio</a>
-          </div>
-
-          <div class="eight wide column">
-          <i href="#top" class="up arrow icon">Back to top</i>
           </div>
 
       
