--- a/index.html
+++ b/index.html
@@ -76,6 +76,29 @@
   <i class="circular heart red icon"></i>
 </div>
 
+
+
+
+<div class="ui grid">
+  <div class="two wide column">
+      <div class="ui circular segment"></i>
+        </div>
+        <p>$1.50</p>
+  </div>
+
+  <div class="two wide column">
+      <i class="circle icon"><p>$2.25</p></i>
+  </div>
+
+  <div class="two wide column">
+      <i class="circle icon"><p>$2.75</p></i>
+  </div>
+
+  <div class="two wide column">
+      <i class="circle icon"><p>$3.50</p></i>
+  </div>
+
+
 <!--// PAGE 2 //-->
 
 
@@ -87,7 +110,8 @@
 <div class="ui grid">
   <div class="four wide column">
     <div class="ui segment">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptate tenetur accusantium similique quisquam aliquid quidem atque unde vel iure, laboriosam iusto sapiente odit autem repellat ipsa distinctio, reprehenderit asperiores.</p>
+      <h3>Spiral Ecstasy Roll</h3>
+      <p>Shrimp, crab stick and avocado rolled with salmon, yellowtail and tuna</p>
     </div>
   </div>
   <div class="four wide column">
